Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.7.0
Description
When disabling minidumps by setting 'minidump_path' to an empty string, the signal handler for SIGUSR1 in be/src/util/minidump.cc is not registered, leaving the signal unhandled. If someone sends that signal to the process, it will crash.
We should register a signal handler nonetheless and either ignore the signal or print a log message explaining that minidumps are disabled.